<resources>
     <string name="app_name">Produits</string>

    <!--Authentification-->

    <!-- Title -->
    <string name="initial_title">Secrets Dreams</string>
    <string name="logged_in_title">You\'re logged in.</string>
    <string name="logged_out_title">You\'re logged out.</string>

    <!-- "Log in" and "Log out" buttons -->
    <string name="button_login">Connexion</string>
    <string name="button_logout">Déconnexion</string>



    <!-- SnackBar messages-->
    <string name="login_success_message">Successfully logged in! %1$s</string>
    <string name="login_failure_message">Failed to log in. %1$s</string>
    <string name="general_failure_with_exception_code">Failed - exception code: %1$s</string>
    <string name="general_success_message">Success!</string>

    <!-- User profile -->
    <string name="user_profile">
        Name: %1$s\n
        Email: %2$s
    </string>

    <!-- Metadata -->
    <string name="textview_metadata_heading">Metadata</string>
    <string name="textview_metadata_info">Use the text box and buttons below to get and set the \'country\' field in the user\'s metadata.</string>

    <!-- "Get" and "Set" buttons -->
    <string name="button_get">Get</string>
    <string name="button_set">Set</string>



    <string name="home_page_title">Accueil</string>
    <string name="home_page_last_product_section">Dernières sélections</string>
    
    <string name="bottom_home_item">Accueil</string>
    <string name="bottom_selection_item">Mes sélections</string>
    <string name="bottom_add_product_item">Ajouter</string>

   <!--  Page mes selections-->
    <string name="selection_page_title">Mes sélections</string>
     <string name="add_product_page_title">Mes sélections</string>


    <!--Page ajout de produits-->
    <!--<string name="add_product_page_upload_button">Ajouter un produit</string>-->
    <string name="add_product_page_upload_button">Charger image</string>
    <string name="add_product_page_name_button">Nom du produit</string>
    <string name="add_product_page_description_button">Description du produit</string>
    <string name="add_product_page_category_button">Catégorie du produit</string>
    <string name="add_product_page_budget_button">Budget du produit</string>
    <string name="add_product_page_save_button">Enregistrer</string>

    <string-array name="add_product_page_category_input">
        <item>Catégorie: Massages</item>
        <item>Catégorie: Fleurs</item>
        <item>Catégorie: Traiteur</item>
    </string-array>

    <string-array name="add_product_page_budget_input">
        <item>Budget: De 20€ à 30€</item>
        <item>Budget: De 30€ à 50€</item>
        <item>Budget: Au delà de 50€</item>
    </string-array>

    <string name="add_product_page_confirm_button">Confirmer</string>-->
    
    Fenetre popup de détail
    <string name="popup_product_name">Product name</string>
    <string name="popup_product_description_title">Description</string>
    <string name="popup_product_description_subtitle">Petite description</string>
    <string name="popup_product_category_title">Catégorie</string>
    <string name="popup_product_category_subtitle">Fleurs</string>
    <string name="popup_product_budget_title">Budget</string>
    <string name="popup_product_budget_subtitle">De 20€ à 30€</string>

    <!--Product customise-->
    <string name="item_product_name">Nom du produit</string>
    <string name="item_product_description">Description du produit</string>
</resources>