<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

<!--Boite qui contient deux composant-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product_page_upload_button"
            android:background="@color/pink"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:padding="@dimen/default_margin"
            />

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/tulipes"
    />

    </LinearLayout>

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/add_product_page_name_button"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/item_margin_left"
        />

    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/add_product_page_description_button"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/item_margin_left"
        />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:entries="@array/add_product_page_category_input"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        />

    <Spinner
        android:id="@+id/budget_spinner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:entries="@array/add_product_page_budget_input"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/item_margin_left"
        />


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/add_product_page_save_button"
        android:background="@color/brown"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_marginTop="@dimen/margin_large"
        />

</LinearLayout>