<?xml version="1.0" encoding="utf-8"?>

<!--pas de match_parent car je ne veux pas que la taille s'adapte au téléphone-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="@dimen/default_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="76dp"
            android:layout_height="74dp"
            android:scaleType="centerCrop"
            android:src="@drawable/massage" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_product_name"
        android:layout_marginLeft="40dp"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/darkGray"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="@dimen/default_margin"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/popup_product_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_product_description_title"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/darkGray"
        android:textSize="16dp"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        />

    <TextView
        android:id="@+id/popup_product_description_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_product_description_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_product_description_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_product_description_title" 
        />

    <TextView
        android:id="@+id/popup_product_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:fontFamily="@font/lato_bold"
        android:text="@string/popup_product_category_title"
        android:textColor="@color/darkGray"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/popup_product_description_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_product_description_subtitle"
        />

    <TextView
        android:id="@+id/popup_product_category_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_product_category_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_product_category_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_product_category_title"
        />


    <TextView
        android:id="@+id/popup_product_budget_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:text="@string/popup_product_budget_title"
        android:textColor="@color/darkGray"
        android:textSize="16dp"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/popup_product_category_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_product_category_subtitle"
        />

    <TextView
        android:id="@+id/popup_product_budget_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_product_budget_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_product_budget_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_product_budget_title"
        />

        <!--barre de séparation de contrainte-->
    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:visibility="invisible"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_product_budget_subtitle"
        />

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_trash"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintEnd_toStartOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation"
        />

    <ImageView
        android:id="@+id/star_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_unlike"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintStart_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />



</androidx.constraintlayout.widget.ConstraintLayout>